# poc

.github/workflows/: ci.yml
bun-poc/: bun.lockb  http.ts  package.json  tsconfig.json
bun-poc/public/: index.html
bun-poc/src/: index.tsx
connect-example/: buf.gen.yaml  connect.test.ts  connect.ts  mock.ts  package-lock.json  package.json  server.ts  tsconfig.json
connect-example/proto/: count.proto
deno-poc/docusign-oauth2-poc/: .envrc.sample  index.html  main.ts
deno-poc/fresh-poc/: .envrc.sample  README.md  fresh.gen.ts  import_map.json
deno-poc/fresh-poc/components/: Button.tsx  Form.tsx  Spinner.tsx
deno-poc/fresh-poc/islands/: NavigationBar.tsx  TokenValidation.tsx
deno-poc/fresh-poc/models/: state.ts  user.ts
deno-poc/fresh-poc/routes/: _middleware.ts  index.tsx
deno-poc/fresh-poc/utils/: constants.ts  cookie.ts  oauth_config.ts
deno-poc/slack-bot-poc/: deps.ts  main.ts  type.d.ts  utils.ts
kt-webapp/: README.md
kt-webapp/rest-kotlin-quickstart/: README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts
ktus/: .editorconfig  settings.gradle.kts
ktus/lib/: build.gradle.kts
rsapps/: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
rsapps/.github/workflows/: pull_request.yml
rsapps/scripts/: copy.bara.sky
rsapps/server/: .dockerignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
rsapps/server/migrations/: 20201231115500_create-users.sql  20210101060906_create-todos.sql  20210111133147_add-user-id-column-to-todo.sql
rsapps/server/src/: auth.rs  lib.rs  main.rs
rsapps/server/src/domains/: errors.rs  mod.rs
rsapps/server/src/domains/entities/: mod.rs  todo.rs  user.rs
rsapps/server/src/domains/repositories/: todo_repository.rs  user_repository.rs
rsapps/server/src/gql/: mod.rs  mutation.rs  query.rs  todo_resolver.rs  user_resolver.rs
rsapps/server/src/infrastructures/: database.rs  di_container.rs  mod.rs
rsapps/server/src/infrastructures/repositories/: todo_repository.rs  user_repository.rs
rsapps/server/src/services/: mod.rs  todo_service.rs  user_service.rs
rsapps/server/tests/: fixtures.rs  lib.rs
rsapps/server/tests/infrastructures/repositories/: mod.rs  todo_repository.rs
rsapps/yewapp/: Cargo.toml  Dockerfile  README.md  index.css  index.html  nginx.conf
rsapps/yewapp/gql/: all_todos.graphql  clear_completed_todo.graphql  complete_all_todos.graphql  complete_todo.graphql  create_new_todo.graphql  delete_todo.graphql  login.graphql  schema.json  sign_up.graphql  update_todo.graphql
rsapps/yewapp/src/: main.rs  utils.rs
rsapps/yewapp/src/login/: gql.rs  mod.rs
rsapps/yewapp/src/todo/: gql.rs  mod.rs
scraping/: .gitignore  go.mod  main.go
scraping/fetcher/: .gitignore  Cargo.toml
solid-gql/: .envrc.sample  .eslintrc.json  .lintstagedrc.json  README.md  codegen.yml  graphql.schema.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
speedrun/: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
speedrun/.devcontainer/: Dockerfile  devcontainer.env.sample  devcontainer.json  git.sh  gitconfig
speedrun/kubernetes/tests/: busybox.yaml
speedrun/packer/: README.md  base-image.json  setup.sh
speedrun/scripts/: pack-image.sh  run-terraform.sh
speedrun/speedrun/: azure_vm_management.py  environments.py  sample.env  speedrun.py  ssh_client.py  vm_management.py
speedrun/speedrun/cli/: speedrun.py
speedrun/terraform/: README.md  init.tf  variables.tf
speedrun/terraform/modules/kubernetes/: install-kubernetes.sh  main.tf  variables.tf
speedrun/terraform/modules/management/: main.tf  outputs.tf  variables.tf
speedrun/terraform/modules/queues/: main.tf
spring-batch-poc/: build.gradle.kts  settings.gradle.kts
taurigui/: .gitignore  Cargo.toml  README.md
taurigui/core/: Cargo.toml
taurigui/core/src/: config.rs  inference.rs  lap.rs  lib.rs  preprocessor.rs
taurigui/inferenceapp/: Cargo.toml
taurigui/tauriapp/: package.json
taurigui/tauriapp/src-tauri/: Cargo.toml  tauri.conf.json
taurigui/tauriapp/src-tauri/src/: main.rs
(+36 files in other folders)
