[package]
authors = ["koichirock <koichirookamoto@icloud.com>"]
edition = "2021"
name = "todo-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.8.0", features = ["attributes"]}
async-trait = "0.1.42"
bcrypt = "0.9"
chrono = "0.4"
dyn-clone = "1.0"
jsonwebtoken = "7"
juniper = "0.15"
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.4", features = ["postgres", "runtime-async-std-native-tls", "chrono", "offline"]}
strum = {version = "0.20", features = ["derive"]}
tide = "0.15"

[dev-dependencies]
sqlx-macros = "0.4"
sqlx-rt = "0.2.0"

[[test]]
name = "integration"
path = "tests/lib.rs"
