[package]
name = "gui_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
tract-onnx = "0.15"
anyhow = "1"
serde = { version="1.0", features=["derive"] }
serde_yaml = "0.8"
opencv = "0.53"
log = "0.4.0"
