[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version="1.0.0-beta.2" }

[dependencies]
serde_json = "1.0"
serde = { version="1.0", features= ["derive"] }
tauri = { version="1.0.0-beta.4", features= ["dialog-all", "fs-read-binary-file", "fs-read-text-file"] }
gui_core = { path="../../core" }
log = "0.4.0"
env_logger = "0.8.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
